examples/json-shim-demo-client/CAPTURED-OUTPUT.txt
# json-shim-demo-client — captured provekit materialize output
# Generated 2026-05-24T22:10:30Z on branch java-json-shim-demo
# provekit: implementations/rust/target/release/provekit (release build)
# Same concept:family:json contract, two libraries, caller picks via --library.

================ RUN 1: --library jackson (out-dir + compile-check) ================
[1m[36mmaterialize[39m[0m compile-check: running java compiler over /tmp/mat-jackson
[1m[31merror[39m[0m: compile-check: javac failed (exit 1)
/tmp/mat-jackson/ConfigCodec.java:21: error: cannot find symbol
        public static JsonNode parseConfig(String s) {
                      ^
  symbol:   class JsonNode
  location: class ConfigCodec.ParseConfigTransported
/tmp/mat-jackson/ConfigCodec.java:35: error: cannot find symbol
        public static String renderConfig(JsonNode v) {
                                          ^
  symbol:   class JsonNode
  location: class ConfigCodec.RenderConfigTransported
/tmp/mat-jackson/ConfigCodec.java:24: error: cannot find symbol
                        return MAPPER.readTree(s);
                               ^
  symbol:   variable MAPPER
  location: class ConfigCodec.ParseConfigTransported
/tmp/mat-jackson/ConfigCodec.java:25: error: cannot find symbol
                    } catch (JsonProcessingException e) {
                             ^
  symbol:   class JsonProcessingException
  location: class ConfigCodec.ParseConfigTransported
/tmp/mat-jackson/ConfigCodec.java:38: error: cannot find symbol
                        return MAPPER.writeValueAsString(v);
                               ^
  symbol:   variable MAPPER
  location: class ConfigCodec.RenderConfigTransported
/tmp/mat-jackson/ConfigCodec.java:39: error: cannot find symbol
                    } catch (JsonProcessingException e) {
                             ^
  symbol:   class JsonProcessingException
  location: class ConfigCodec.RenderConfigTransported
6 errors

[exit: 1]

---- emitted /tmp/mat-jackson/ConfigCodec.java ----
// SPDX-License-Identifier: Apache-2.0
//
// json-shim-demo-client: a CONSUMER that needs JSON parse + serialize via the
// concept:family:json CONTRACT, not a specific library. The two carrier sites
// below cite concept:json-parse and concept:json-serialize. `provekit
// materialize --library jackson` realizes them against the Jackson shim;
// `--library gson` realizes the SAME contract against the Gson shim.
//
// The body between the carrier and the next site is what materialize replaces.

package org.provekit.demo.jsonclient;

public final class ConfigCodec {

    private ConfigCodec() {
    }

    final class ParseConfigTransported {
        // @substrate-signature {"visibility":"","genericParams":"","originalParamTypes":[],"paramSortCids":[],"returnSortCid":"","sourceReturnType":"JsonNode","docLines":[]}
        // concept: concept:json-parse
        public static JsonNode parseConfig(String s) {
            // __fragment_imports__: com.fasterxml.jackson.databind.JsonNode, com.fasterxml.jackson.databind.ObjectMapper, com.fasterxml.jackson.core.JsonProcessingException
                    try {
                        return MAPPER.readTree(s);
                    } catch (JsonProcessingException e) {
                        throw new RuntimeException("json-parse: " + e.getMessage(), e);
                    }
            
        }
    }

    final class RenderConfigTransported {
        // @substrate-signature {"visibility":"","genericParams":"","originalParamTypes":[],"paramSortCids":[],"returnSortCid":"","sourceReturnType":"String","docLines":[]}
        // concept: concept:json-serialize
        public static String renderConfig(JsonNode v) {
            // __fragment_imports__: com.fasterxml.jackson.databind.JsonNode, com.fasterxml.jackson.databind.ObjectMapper, com.fasterxml.jackson.core.JsonProcessingException
                    try {
                        return MAPPER.writeValueAsString(v);
                    } catch (JsonProcessingException e) {
                        throw new RuntimeException("json-serialize: " + e.getMessage(), e);
                    }
            
        }
    }
}

================ RUN 2: --library gson (out-dir + compile-check) ================
[1m[36mmaterialize[39m[0m compile-check: running java compiler over /tmp/mat-gson
[1m[31merror[39m[0m: compile-check: javac failed (exit 1)
/tmp/mat-gson/ConfigCodec.java:21: error: cannot find symbol
        public static JsonNode parseConfig(String s) {
                      ^
  symbol:   class JsonNode
  location: class ConfigCodec.ParseConfigTransported
/tmp/mat-gson/ConfigCodec.java:35: error: cannot find symbol
        public static String renderConfig(JsonNode v) {
                                          ^
  symbol:   class JsonNode
  location: class ConfigCodec.RenderConfigTransported
/tmp/mat-gson/ConfigCodec.java:24: error: cannot find symbol
                        return JsonParser.parseString(s);
                               ^
  symbol:   variable JsonParser
  location: class ConfigCodec.ParseConfigTransported
/tmp/mat-gson/ConfigCodec.java:25: error: cannot find symbol
                    } catch (JsonSyntaxException e) {
                             ^
  symbol:   class JsonSyntaxException
  location: class ConfigCodec.ParseConfigTransported
/tmp/mat-gson/ConfigCodec.java:37: error: cannot find symbol
                    return GSON.toJson(v);
                           ^
  symbol:   variable GSON
  location: class ConfigCodec.RenderConfigTransported
5 errors

[exit: 1]

---- emitted /tmp/mat-gson/ConfigCodec.java ----
// SPDX-License-Identifier: Apache-2.0
//
// json-shim-demo-client: a CONSUMER that needs JSON parse + serialize via the
// concept:family:json CONTRACT, not a specific library. The two carrier sites
// below cite concept:json-parse and concept:json-serialize. `provekit
// materialize --library jackson` realizes them against the Jackson shim;
// `--library gson` realizes the SAME contract against the Gson shim.
//
// The body between the carrier and the next site is what materialize replaces.

package org.provekit.demo.jsonclient;

public final class ConfigCodec {

    private ConfigCodec() {
    }

    final class ParseConfigTransported {
        // @substrate-signature {"visibility":"","genericParams":"","originalParamTypes":[],"paramSortCids":[],"returnSortCid":"","sourceReturnType":"JsonNode","docLines":[]}
        // concept: concept:json-parse
        public static JsonNode parseConfig(String s) {
            // __fragment_imports__: com.google.gson.Gson, com.google.gson.JsonElement, com.google.gson.JsonParser, com.google.gson.JsonSyntaxException
                    try {
                        return JsonParser.parseString(s);
                    } catch (JsonSyntaxException e) {
                        throw new RuntimeException("json-parse: " + e.getMessage(), e);
                    }
            
        }
    }

    final class RenderConfigTransported {
        // @substrate-signature {"visibility":"","genericParams":"","originalParamTypes":[],"paramSortCids":[],"returnSortCid":"","sourceReturnType":"String","docLines":[]}
        // concept: concept:json-serialize
        public static String renderConfig(JsonNode v) {
            // __fragment_imports__: com.google.gson.Gson, com.google.gson.JsonElement, com.google.gson.JsonParser, com.google.gson.JsonSyntaxException
                    return GSON.toJson(v);
            
        }
    }
}

================ PROOF: realize body-source is the DISK JSON, not the .proof/shim ================
# With java-canonical-bodies-{jackson,gson}.json moved aside, both sites REFUSE:
    "exact": 0,
    "lossy": 0,
    "refused": 2
[1m[32mmaterialize[39m[0m dry-run: 0 exact + 0 lossy + 2 refused across 1 file(s)
# (restored). With the JSON present, both sites resolve (see RUN 1/2 above).
